Add Mastodon link in sidebar

--- a/web/input/_sidebar.cshtml
+++ b/web/input/_sidebar.cshtml
@@ -5,6 +5,7 @@
   <ul class="list-unstyled about-links">
     <li><a href="https://github.com/rdeago"><i class="fab fa-github"></i> GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/rdeago"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+    <li><a rel="me" href="https://hachyderm.io/@@rdeago"><i class="fa-brands fa-mastodon"></i> Mastodon</a></li>
     <li><a href="https://rdeago.medium.com"><i class="fab fa-medium"></i> Medium</a></li>
     <li><a href="https://keybase.io/rdeago"><i class="fab fa-keybase"></i> Keybase</a></li>
     <li><a href="https://twitter.com/rdeago"><i class="fab fa-twitter"></i> Twitter</a></li>
